# gpcmodules

gpcmodules/fileman/: .cvsignore  AUTHORS  Makefile.am  configure.in  e_fwin.c  e_fwin_common.h  e_fwin_dlg.c  e_fwin_dlg.h  e_mod_config.c  e_mod_main.c  e_mod_main.h  e_toolbar.c  e_toolbar.h  fileman.edc
gpcmodules/patches/: e_about.c.diff  e_fm_copy_paste.diff  e_int_menus.c.diff
gpcmodules/patches/conf/: e_conf.c.diff  e_mod_main.c.diff
